--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,8 @@ on:
       - main
 
 jobs:
-  publish:
+  publish-deno:
+    name: Publish (Deno)
     runs-on: ubuntu-latest
 
     permissions:
@@ -16,3 +17,26 @@ jobs:
       - uses: actions/checkout@v4
       - name: Publish package
         run: npx jsr publish
+
+  publish-npm:
+    name: Publish (Deno)
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      - name: Build
+        run: deno task build:npm
+      - run: npm publish --provenance --access public
+        working-directory: npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
