--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,12 @@
 {
   "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
   "name": "@bcheidemann/flatten-ignorefiles",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "tasks": {
-    "dev": "deno run main.ts"
+    "dev": "deno run main.ts",
+    "build:npm": "deno run -A scripts/build_npm.ts"
   },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@^1.0.1",
-    "@std/cli": "jsr:@std/cli@^1.0.1",
-    "@std/fs": "jsr:@std/fs@^1.0.0",
-    "@std/path": "jsr:@std/path@^1.0.2"
-  },
+  "imports": {},
   "exports": {
     ".": "./main.ts",
     "./mod": "./mod.ts"
