--- a/deno.json
+++ b/deno.json
@@ -7,11 +7,7 @@
     "build:npm": "deno run -A scripts/build_npm.ts"
   },
   "imports": {
-    "@deno/dnt": "jsr:@deno/dnt@^0.41.2",
-    "@std/assert": "jsr:@std/assert@^1.0.1",
-    "@std/cli": "jsr:@std/cli@^1.0.1",
-    "@std/fs": "jsr:@std/fs@^1.0.0",
-    "@std/path": "jsr:@std/path@^1.0.2"
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.2"
   },
   "exports": {
     ".": "./main.ts",
